
Known problems:
    1. The "_parent" and "_empty" frame targets are not handled correctly
    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:
25-Mar-2002
Problems fixed:
    1. Parameters were not being submitted for image buttons with no specified value

21-Mar-2002
Acknowledgements:
    Thanks to Frank Carver for extending base 64 encoding to handle character values > 127.

Problems fixed:
    1. Passwords with character values > 127 are now handled.


15-Mar-2002
Acknowledgements:
    Thanks to Stefan Renz for finding the file control value bug and providing a fix.

Problems fixed:
    1. Trying to get the value of a file parameter no longer results in a null pointer exception.

14-Mar-2002
Additions:
    1. It is now possible to set the action on a form using a mechanism which will support scripting in the future:
              form.getScriptableObject().setAction( newAction )

11-Mar-2002

Additions:
    1. HttpUnit now sends Accept-encoding: gzip unless disabled by a call to HttpUnitOptions.setAcceptGzip( false )

Notes:
    1. Hidden fields may not be modified if parameter validation is enabled, since they cannot be modified through
       normal user interaction (in the absence of JavaScript).


 6-Mar-2002 1.4
Acknowledgements:
    Thanks to Didier Besset for correcting the WebForm methods: hasParameterNamed and hasParameterStartingWithPrefix
    Thanks to Stefan G. Renz for identifying the infinite loop bug in frame handling
    Thanks to Alex Chaffee for implementing context parameters for web.xml in ServletUnit
    Thanks to Jochen Hiller for supplying code to use jaxp to select a parser rather than being hardcoded to xerces
    Thanks to Oliver Imbusch for adding the WebClientListener behavior