@@ -11,6 +11,11 @@ Limitations:
 
 
 Revision History:
+ 8-Apr-2002
+Additions:
+    1. It is now possible to set the value of a hidden field in a form using a mechanism which will support scripting in the future:
+              form.getScriptableObject().setParameterValue( fieldName, newValue )
+
 25-Mar-2002
 Problems fixed:
     1. Parameters were not being submitted for image buttons with no specified value
